<resources>
    <string name="app_name">MyGameList</string>
    <string name="settings">Settings</string>
    <string name="title_activity_minha_conta">MyAccount</string>
    <string name="title_activity_jogos">Games</string>
    <string name="title_activity_plataformas">Platforms</string>
    <string name="plataformas">Platforms</string>
    <string name="jogos">Games</string>
    <string name="EditarJogo">Edit Games</string>
    <string name="itemsettings">Settings</string>
    <string name="itemminhaconta">My account</string>
    <string name="Novojogo">New Game</string>
    <string name="itemadicionarnovojogo">Add</string>
    <string name="title_activity_novo_jogo">NewGame</string>
    <string name="spinner_genero">Choose genre</string>
    <string name="nome_obrigatorio">Name of the game is required</string>
    <string name="genero_obrigatorio">Genre is required</string>
    <string name="plataforma_obrigatorio">Platform is required</string>
    <string name="jogados_obrigatorio">Activity is required</string>
    <string name="dias_obrigatorio"> dd </string>
    <string name="mes_obrigatorio"> mm </string>
    <string name="ano_obrigatorio">yyyy</string>
    <string name="dados_sucesso">Data saved successfully</string>
    <string name="itemeditarjogo">Edit</string>
    <string name="itemeliminarjogo">Delete</string>
    <string name="completado">Completed</string>
    <string-array name="generos">
        <item>Escolha o Género</item>
        <item>FPS</item>
        <item>Luta</item>
        <item>Estrategia</item>
        <item>RPG</item>
    </string-array>
    <string-array name="dia">
        <item> dd </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="mes">
        <item> mm </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="ano">
        <item>aaaa</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
    </string-array>
    <string name="titulo_aviso">Warning message!</string>
    <string name="mensagem_aviso">Are you sure you want to delete it?</string>
    <string name="spinner_plataforma">Choose platform</string>
    <string name="buttonguardar">Save</string>
    <string name="nome_do_jogo">Name of the game</string>
    <string name="nome_da_plataforma">Name of the platform</string>
    <string name="buttoncancelar">Cancel</string>
    <string name="textviewgeneros">Genres</string>
    <string name="textviewplataformas">Platforms</string>
    <string name="eliminado_sucesso">Successfully Eliminated</string>
    <string name="title_activity_eliminar_jogo">Delete Game</string>
    <string name="title_activity_editar_jogo">Edit Game</string>
    <string name="atividade">Activity</string>
    <string-array name="plataformas">
        <item>Escolha Plataforma</item>
        <item>Plataforma1</item>
        <item>Plataforma2</item>
        <item>Plataforma3</item>
    </string-array>
    <string-array name="jogados">
        <item>Atividade do jogo</item>
        <item>Não jogado</item>
        <item>A jogar</item>
        <item>Completado</item>
    </string-array>
    <string name="release">Release:</string>
    <string name="title_activity_editar_plataforma">Edit Plataform</string>
    <string name="title_activity_eliminar_plataforma">Delete Plataform</string>
    <string name="title_activity_nova_plataforma">Add Plataform</string>
    <string name="nome_plataforma">Name of platform</string>
    <string name="nome_genero">Name of genre</string>
    <string name="title_activity_generos">Generos</string>
    <string name="title_activity_novo_genero">New Genre</string>
    <string name="title_activity_editar_genero">Edit Genre</string>
    <string name="title_activity_eliminar_genero">Delete Genre</string>
    <string name="genero_elimando_sucesso">The genre was deleted successfully</string>
    <string name="plataforma_elimando_sucesso">The platform was deleted successfully</string>
    <string name="jogo_elimando_sucesso">The game was deleted successfully</string>
    <string name="botao_ok">OK</string>
    <string name="botao_cancelar">Cancel</string>
    <string name="add_favoritos">Add to favorites</string>
</resources>
