<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mygamelist.JogosActivity">
    <item
        android:id="@+id/NovoJogo"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:orderInCategory="100"
        android:tint="#FFFFFF"
        android:title="@string/itemadicionarnovojogo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/EditarJogo"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="100"
        android:title="@string/itemeditarjogo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/EliminarJogo"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:title="@string/itemeliminarjogo"
        app:showAsAction="never" />
</menu>
