<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditarGeneroActivity"
    tools:showIn="@layout/activity_editar_genero">

    <Button
        android:id="@+id/buttonGuardarGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:onClick="ConfirmarGenero"
        android:text="@string/buttonguardar"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEliminarCancelarGenero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEliminarCancelarGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:onClick="CancelarGenero"
        android:text="@string/buttoncancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeGenero" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewNomeGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewGeneroItem"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/nome_genero" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>