<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditarJogoActivity"
    tools:showIn="@layout/activity_editar_jogo"
    tools:ignore="PrivateResource">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewNomeJogo"
        android:layout_width="208dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:inputType=""
        app:layout_constraintStart_toEndOf="@+id/imageViewFoto"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewnomejogo"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/nome_do_jogo" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="@dimen/margin_button"
        android:onClick="ConfirmarJogo"
        android:text="@string/buttonguardar"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCancelar"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancelar"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:onClick="CancelarJogo"
        android:text="@string/buttoncancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFavoritos" />

    <Spinner
        android:id="@+id/spinnerJogado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_height"
        android:layout_marginRight="@dimen/standard_margin"
        android:entries="@array/jogados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPlataformas" />

    <TextView
        android:id="@+id/textViewRelease"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/release"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerJogado" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewDataLancamento"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/checkBoxFavoritos"
        app:layout_constraintStart_toEndOf="@+id/textViewRelease"
        app:layout_constraintTop_toBottomOf="@+id/spinnerJogado">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewdataLanc"
            android:layout_width="172dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="Date" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxFavoritos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_favoritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRelease" />

    <androidx.recyclerview.widget.RecyclerView
        android:background="@drawable/border_recycler_view"
        android:id="@+id/recyclerViewGeneros"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:background="@drawable/border_recycler_view"
        android:id="@+id/recyclerViewPlataformas"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:text="Data"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxFavoritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDataLancamento"
        app:layout_constraintTop_toBottomOf="@+id/spinnerJogado" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/title_activity_generos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeJogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/title_activity_plataformas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewGeneros" />

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/buttonProcurarImagem"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:text="Procurar Imagem"
        app:layout_constraintStart_toEndOf="@+id/imageViewFoto"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeJogo" />

</androidx.constraintlayout.widget.ConstraintLayout>