<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NovoJogo"
    tools:showIn="@layout/activity_novo_jogo"
    tools:ignore="PrivateResource">

    <EditText
        android:autofillHints=""
        android:id="@+id/textViewNomeJogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/margin_height"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/nome_do_jogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="@dimen/margin_height"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="ConfirmarJogo"
        android:text="@string/buttonguardar"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerJogado" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_height"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:onClick="CancelarJogo"
        android:text="@string/buttoncancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerJogado" />

    <Spinner
        android:id="@+id/spinnerGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_height"
        android:layout_marginEnd="@dimen/margin_height"
        android:layout_marginRight="@dimen/standard_margin"
        android:entries="@array/generos"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeJogo" />

    <Spinner
        android:id="@+id/spinnerPlataforma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_height"
        android:layout_marginEnd="@dimen/margin_height"
        android:layout_marginRight="@dimen/standard_margin"
        android:entries="@array/plataformas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGenero" />

    <Spinner
        android:id="@+id/spinnerJogado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_height"
        android:layout_marginEnd="@dimen/margin_height"
        android:layout_marginRight="@dimen/standard_margin"
        android:entries="@array/jogados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPlataforma" />
</androidx.constraintlayout.widget.ConstraintLayout>